--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,3 +43,8 @@ include(cmake/static_analyzers.cmake)
 # hyper
 #-------------------------------------------------------------------------------------------
 add_subdirectory(hyper)
+
+#-------------------------------------------------------------------------------------------
+# hyper test
+#-------------------------------------------------------------------------------------------
+add_subdirectory(hyper_test)
