--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -1,10 +1,10 @@
-name: build-linux
+name: build-macos
 
 on: [ push, pull_request ]
 
 jobs:
   build-linux:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     defaults:
       run:
         shell: bash
@@ -13,31 +13,17 @@ jobs:
       matrix:
         config:
           - {
-            name: "Ubuntu Clang Debug",
-            artifact: "linux-clang-debug.tar.xz",
-            cc: "clang-12",
-            cxx: "clang++-12",
+            name: "MacOS Clang Debug",
+            artifact: "macos-clang-debug.zip",
+            cc: "cc",
+            cxx: "c++",
             build_type: "Debug"
           }
           - {
-            name: "Ubuntu GCC Debug",
-            artifact: "linux-gcc-debug.tar.xz",
-            cc: "gcc-10",
-            cxx: "g++-10",
-            build_type: "Debug"
-          }
-          - {
-            name: "Ubuntu Clang Release",
-            artifact: "linux-clang-release.tar.xz",
-            cc: "clang-12",
-            cxx: "clang++-12",
-            build_type: "Release"
-          }
-          - {
-            name: "Ubuntu GCC Release",
-            artifact: "linux-gcc-release.tar.xz",
-            cc: "gcc-10",
-            cxx: "g++-10",
+            name: "MacOS Clang Release",
+            artifact: "macos-clang-release.zip",
+            cc: "cc",
+            cxx: "c++",
             build_type: "Release"
           }
     steps:
@@ -45,15 +31,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
-
-      - name: Update environment
-        run: |
-          sudo apt update -qq
-          sudo apt install -y \
-            clang-12 \
-            cmake \
-            gcc-10 \
-            g++-10
 
       - name: Configure cmake
         run: |
