Hyper: Adding module declaration & fixing extern segfault

--- a/hyper/CMakeLists.txt
+++ b/hyper/CMakeLists.txt
@@ -24,6 +24,7 @@ set(SOURCES
         src/hyper/ast/declarations/extern_declaration.cpp
         src/hyper/ast/declarations/function_declaration.cpp
         src/hyper/ast/declarations/import_declaration.cpp
+        src/hyper/ast/declarations/module_declaration.cpp
         src/hyper/ast/declarations/parameter_declaration.cpp
         src/hyper/ast/declarations/translation_unit_declaration.cpp
         src/hyper/ast/declarations/variable_declaration.cpp
@@ -77,6 +78,7 @@ set(HEADERS
         include/hyper/ast/declarations/extern_declaration.hpp
         include/hyper/ast/declarations/function_declaration.hpp
         include/hyper/ast/declarations/import_declaration.hpp
+        include/hyper/ast/declarations/module_declaration.hpp
         include/hyper/ast/declarations/parameter_declaration.hpp
         include/hyper/ast/declarations/public_declaration.hpp
         include/hyper/ast/declarations/translation_unit_declaration.hpp
