--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4"
+color-eyre = "0.6"
+fern = { version = "0.6", features = [ "colored" ] }
+log = "0.4"
 
 [profile.dev]
 opt-level = 1
