--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ color-eyre = "0.6"
 fern = { version = "0.6", features = [ "colored" ] }
 log = "0.4"
 
+[dev-dependencies]
+paste = "1.0"
+rand = "0.8"
+
 [profile.dev]
 opt-level = 1
 
