Diagnostics: Add lexer diagnostics

--- a/compiler/hyperc_diagnostics/Cargo.toml
+++ b/compiler/hyperc_diagnostics/Cargo.toml
@@ -11,3 +11,5 @@ edition = "2021"
 
 [dependencies]
 hyperc_span = { path = "../hyperc_span" }
+
+annotate-snippets = { version = "0.9", features = [ "color" ] }
