--- a/compiler/hyperc/Cargo.toml
+++ b/compiler/hyperc/Cargo.toml
@@ -10,7 +10,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+hyperc_diagnostics = { path = "../hyperc_diagnostics" }
 hyperc_lexer = { path = "../hyperc_lexer" }
 hyperc_parser = { path = "../hyperc_parser" }
 
 color-eyre = "0.6"
+unindent = "0.2"
