--- a/compiler/hyperc_parser/Cargo.toml
+++ b/compiler/hyperc_parser/Cargo.toml
@@ -13,4 +13,4 @@ edition = "2021"
 hyperc_diagnostics = { path = "../hyperc_diagnostics" }
 hyperc_span = { path = "../hyperc_span" }
 
-thiserror = "1.0"
+unindent = "0.2"
